--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     </head>
-    <div>
-        <header>
-            <img src="image-qr-code.png" alt="QR code for Frontend Mentor's webpage">
-        </header>
-        <footer>
-            <h1>Improve your front-end skills by building projects</h1>
-            <h4>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h4>
-        </footer>
-    </div>
+    </main>
+        <body>
+            <div class="container">
+                <img src="image-qr-code.png" alt="QR code for Frontend Mentor's webpage">
+                <h1 class="title">Improve your front-end skills by building projects</h1>
+                <h2 class="sub">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</h2>
+            </div>
+        </body>
+    </main>
 </html>
