--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>QR Code</title>
         <link rel="stylesheet" href="assets/stylesheets/main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
